--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -67,9 +67,9 @@
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
     "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
-    "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
+    "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
     "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
-    "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.. If this is an error, use /crd refresh or contact an admin.",
+    "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
     "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
     "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
     "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
