Improved phrasing for reward phase

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -99,7 +99,8 @@
     "screen.cobblemonraiddens.reward.description.1": "Would you like to catch the Pokemon?",
     "screen.cobblemonraiddens.reward.description.2": "The Pokemon disappeared...",
     "screen.cobblemonraiddens.reward.pokemon": "Catch",
-    "screen.cobblemonraiddens.reward.item": "Leave",
+    "screen.cobblemonraiddens.reward.item": "Pass",
+    "screen.cobblemonraiddens.reward.force_item": "Claim Rewards",
     "screen.cobblemonraiddens.footer": "ALT: Mouse Mode",
     "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
     "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
