Added the pokemon name to reward messages

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -96,8 +96,8 @@
     "screen.cobblemonraiddens.request.accept": "Accept",
     "screen.cobblemonraiddens.request.deny": "Deny",
     "screen.cobblemonraiddens.reward.title": "Raid Success!",
-    "screen.cobblemonraiddens.reward.description.1": "Would you like to catch the Pokemon?",
-    "screen.cobblemonraiddens.reward.description.2": "The Pokemon disappeared...",
+    "screen.cobblemonraiddens.reward.description.1": "Would you like to catch %s?",
+    "screen.cobblemonraiddens.reward.description.2": "%s disappeared somewhere...",
     "screen.cobblemonraiddens.reward.pokemon": "Catch",
     "screen.cobblemonraiddens.reward.item": "Pass",
     "screen.cobblemonraiddens.reward.force_item": "Claim Rewards",
