Added customisation for mouse button

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -63,6 +63,15 @@
     "key.cobblemonraiddens.accept": "Accept Shortcut",
     "key.cobblemonraiddens.deny": "Deny Shortcut",
     "key.cobblemonraiddens.mouse": "Show Mouse",
+    "key.cobblemonraiddens.short.left_control": "L CTRL",
+    "key.cobblemonraiddens.short.left_alt": "L ALT",
+    "key.cobblemonraiddens.short.left_shift": "L SHIFT",
+    "key.cobblemonraiddens.short.right_control": "R CTRL",
+    "key.cobblemonraiddens.short.right_alt": "R ALT",
+    "key.cobblemonraiddens.short.right_shift": "R SHIFT",
+    "key.cobblemonraiddens.short.left_mouse": "LMB",
+    "key.cobblemonraiddens.short.middle_mouse": "MMB",
+    "key.cobblemonraiddens.short.right_mouse": "RMB",
     "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
@@ -101,7 +110,7 @@
     "screen.cobblemonraiddens.reward.pokemon": "Catch",
     "screen.cobblemonraiddens.reward.item": "Pass",
     "screen.cobblemonraiddens.reward.force_item": "Claim Rewards",
-    "screen.cobblemonraiddens.footer": "ALT: Mouse Mode",
+    "screen.cobblemonraiddens.footer": "%s: Mouse Mode",
     "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
     "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
     "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
