Added support for custom raid structures

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -72,6 +72,7 @@
     "key.cobblemonraiddens.short.left_mouse": "LMB",
     "key.cobblemonraiddens.short.middle_mouse": "MMB",
     "key.cobblemonraiddens.short.right_mouse": "RMB",
+    "message.cobblemonraiddens.raid.boss_spawn_failed": "The raid boss or raid den failed to spawn.",
     "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
@@ -86,6 +87,7 @@
     "message.cobblemonraiddens.raid.has_fainted": "You have already fainted!",
     "message.cobblemonraiddens.raid.is_not_active": "The raid den is not active right now.",
     "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
+    "message.cobblemonraiddens.raid.no_host": "The host could not be reached...",
     "message.cobblemonraiddens.raid.no_key": "You do not have a Raid Den Key!",
     "message.cobblemonraiddens.raid.not_participating": "You have not registered for the raid. Leave and rejoin the lobby.",
     "message.cobblemonraiddens.raid.player_cleared": "You have already cleared this raid.",
