--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -91,6 +91,7 @@
     "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
     "message.cobblemonraiddens.raid.no_host": "The host could not be reached...",
     "message.cobblemonraiddens.raid.no_key": "You do not have a Raid Den Key!",
+    "message.cobblemonraiddens.raid.no_unique_key": "You need a(n) %s to join this raid!",
     "message.cobblemonraiddens.raid.not_participating": "You have not registered for the raid. Leave and rejoin the lobby.",
     "message.cobblemonraiddens.raid.pending_removal": "Please wait before hosting another raid.",
     "message.cobblemonraiddens.raid.player_cleared": "You have already cleared this raid.",
