Changed move blacklist to many blacklists

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -86,8 +86,10 @@
     "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
     "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
     "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
+    "message.cobblemonraiddens.raid.forbidden_ability": "You cannot use a Pokemon with %s in a raid battle.",
     "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
     "message.cobblemonraiddens.raid.forbidden_move": "%s cannot be selected in a raid battle.",
+    "message.cobblemonraiddens.raid.forbidden_pokemon": "You cannot use %s in raid battles.",
     "message.cobblemonraiddens.raid.has_fainted": "You have already fainted!",
     "message.cobblemonraiddens.raid.is_not_active": "The raid den is not active right now.",
     "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
