Added raid battle logs

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -29,6 +29,7 @@
     "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out\"!",
     "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough\"!",
     "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up\"!",
+    "battle.cobblemonraiddens.log.used_move": "%1$s used %2$s!",
     "battle.cobblemonraiddens.player_join": "%1$s has joined the raid!",
     "battle.cobblemonraiddens.raid_energy": "A burst of energy was released from %1$s!",
     "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
@@ -135,7 +136,8 @@
     "stat.cobblemonraiddens.tier_seven_completed": "Tier Seven Raids Completed",
     "tag.item.cobblemonraiddens.raid_den_keys": "Raid Den Key",
     "text.autoconfig.cobbleraiddens-client.title": "Cobblemon Raid Dens Config",
-    "text.autoconfig.cobbleraiddens-client.option.auto_accept_requests": "Automatically accept raid join requests",
+    "text.autoconfig.cobbleraiddens-client.option.auto_accept_requests": "Auto-Accept Join Requests",
+    "text.autoconfig.cobbleraiddens-client.option.enable_raid_logs": "Show Raid Logs",
     "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_one": "Tier One Beacon",
     "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_two": "Tier Two Beacon",
     "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_three": "Tier Three Beacon",
