Added the ability to blacklist commands in raids

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -40,10 +40,11 @@
     "category.cobblemonraiddens.raid_dens": "Raid Dens",
     "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
     "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
+    "error.cobblemonraiddens.command_blacklist": "You cannot use that command in a raid.",
+    "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
     "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
     "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
     "error.cobblemonraiddens.player_in_raid": "You cannot refresh a player that's in the middle of a raid.",
-    "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
     "feature.cobblemonraiddens.default": "Regular",
     "feature.cobblemonraiddens.dynamax": "Dynamax",
     "feature.cobblemonraiddens.gigantamax": "Gigantamax",
