--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -34,6 +34,8 @@
     "battle.cobblemonraiddens.raid_energy": "A burst of energy was released from %1$s!",
     "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
     "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
+    "battle.cobblemonraiddens.shield.add": "Energy has begun to gather around %1$s!",
+    "battle.cobblemonraiddens.shield.remove": "%1$s succumbed to the onslaught and broke its stance!",
     "biome.cobblemonraiddens.raid_den": "Crystal Cavern",
     "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
     "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
