Updated tooltip for cheers

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -60,9 +60,9 @@
     "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
     "item.cobblemonraiddens.cheer.tooltip": "Can only be used in Raid Battles",
     "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
-    "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by one stage",
+    "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by 50%",
     "item.cobblemonraiddens.cheer_defense": "Defense Cheer",
-    "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by one stage",
+    "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by 50%",
     "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
     "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 50% HP for your party",
     "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
