Reworked scripts for battle sync

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -34,13 +34,13 @@
     "battle.cobblemonraiddens.raid_energy": "A burst of energy was released from %1$s!",
     "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
     "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
-    "battle.cobblemonraiddens.shield.add": "Energy has begun to gather around %1$s!",
-    "battle.cobblemonraiddens.shield.remove": "%1$s succumbed to the onslaught and broke its stance!",
     "biome.cobblemonraiddens.raid_den": "Crystal Cavern",
     "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
     "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
     "category.cobblemonraiddens.raid_dens": "Raid Dens",
     "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
+    "cobblemonraiddens.status.shield.apply": "Energy has begun to gather around %1$s!",
+    "cobblemonraiddens.status.shield.cure": "%1$s succumbed to the onslaught and broke its stance!",
     "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
     "error.cobblemonraiddens.command_blacklist": "You cannot use that command in a raid.",
     "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
