Added raid shard item and mechanics

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -7,6 +7,8 @@
     "advancement.cobblemonraiddens.raid_dynamax.description": "Defeat a dynamax raid.",
     "advancement.cobblemonraiddens.raid_mega.title": "Overflowing With Power",
     "advancement.cobblemonraiddens.raid_mega.description": "Defeat a mega raid.",
+    "advancement.cobblemonraiddens.raid_shard_charge.title": "The Treasure of Area Zero",
+    "advancement.cobblemonraiddens.raid_shard_charge.description": "Fully charge a Raid Shard.",
     "advancement.cobblemonraiddens.raid_shiny.title": "A Sparkling Success",
     "advancement.cobblemonraiddens.raid_shiny.description": "Receive a shiny from a raid.",
     "advancement.cobblemonraiddens.raid_tera.title": "The Treasure of Area Zero",
@@ -59,7 +61,6 @@
     "feature.cobblemonraiddens.primal": "Primal",
     "feature.cobblemonraiddens.tera": "Tera",
     "feature.cobblemonraiddens.stellar": "Stellar",
-    "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
     "item.cobblemonraiddens.cheer.tooltip": "Can only be used in Raid Battles",
     "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
     "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by 50%",
@@ -67,6 +68,8 @@
     "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by 50%",
     "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
     "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 50% HP for your party",
+    "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
+    "item.cobblemonraiddens.raid_shard": "Raid Shard",
     "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
     "jade.cobblemonraiddens.player_count": "%s Inside",
     "jade.cobblemonraiddens.max_catches": "Max Catchable: %s",
@@ -83,7 +86,6 @@
     "key.cobblemonraiddens.short.left_mouse": "LMB",
     "key.cobblemonraiddens.short.middle_mouse": "MMB",
     "key.cobblemonraiddens.short.right_mouse": "RMB",
-    "message.cobblemonraiddens.raid.boss_spawn_failed": "The raid boss or raid den failed to spawn.",
     "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "The raid dimension has been removed.",
@@ -91,6 +93,7 @@
     "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
     "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
     "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
+    "message.cobblemonraiddens.raid.boss_spawn_failed": "The raid boss or raid den failed to spawn.",
     "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
     "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
     "message.cobblemonraiddens.raid.fainted_lead": "Your %s has already fainted!",
@@ -110,6 +113,7 @@
     "message.cobblemonraiddens.raid.raid_fail": "The raid boss was too strong!",
     "message.cobblemonraiddens.raid.rejected_request": "%s has rejected your join request.",
     "message.cobblemonraiddens.raid.request_time_out": "The join request has timed out.",
+    "message.cobblemonraiddens.raid_shard.not_fully_charged": "You have not gathered enough raid energy.",
     "message.cobblemonraiddens.reward.already_received_reward": "You have already claimed the rewards.",
     "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
     "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
