--- a/common/src/main/resources/assets/cobblemonraiddens/lang/pt_br.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/pt_br.json
@@ -1,34 +1,34 @@
 {
-    "advancement.cobblemonraiddens.great_friend.title": "O Grande Amigo",
-    "advancement.cobblemonraiddens.great_friend.description": "Use um de cada tipo de Torcida.",
+    "advancement.cobblemonraiddens.great_friend.title": "O grande amigo",
+    "advancement.cobblemonraiddens.great_friend.description": "Utilize um de cada tipo de Apoio.",
     "advancement.cobblemonraiddens.join_raid.title": "Cobblemon Raid Dens",
     "advancement.cobblemonraiddens.join_raid.description": "Entre na sua primeira raid.",
-    "advancement.cobblemonraiddens.raid_dynamax.title": "Uma Aventura Dynamax",
+    "advancement.cobblemonraiddens.raid_dynamax.title": "Uma aventura Dynamax",
     "advancement.cobblemonraiddens.raid_dynamax.description": "Derrote uma raid dynamax.",
-    "advancement.cobblemonraiddens.raid_mega.title": "Transbordando Poder",
+    "advancement.cobblemonraiddens.raid_mega.title": "Transbordando poder",
     "advancement.cobblemonraiddens.raid_mega.description": "Derrote uma raid mega.",
-    "advancement.cobblemonraiddens.raid_shiny.title": "Um Sucesso Brilhante",
+    "advancement.cobblemonraiddens.raid_shiny.title": "Um sucesso brilhante",
     "advancement.cobblemonraiddens.raid_shiny.description": "Receba um shiny de uma raid.",
-    "advancement.cobblemonraiddens.raid_tera.title": "O Tesouro da Área Zero",
+    "advancement.cobblemonraiddens.raid_tera.title": "O tesouro da área zero",
     "advancement.cobblemonraiddens.raid_tera.description": "Derrote uma raid tera.",
-    "advancement.cobblemonraiddens.tier_one.title": "Primeiros Passos",
+    "advancement.cobblemonraiddens.tier_one.title": "Primeiros passos",
     "advancement.cobblemonraiddens.tier_one.description": "Derrote uma raid de nível um.",
     "advancement.cobblemonraiddens.tier_two.title": "Parceiro de Raid",
     "advancement.cobblemonraiddens.tier_two.description": "Derrote uma raid de nível dois.",
-    "advancement.cobblemonraiddens.tier_three.title": "Um Inimigo Formidável",
+    "advancement.cobblemonraiddens.tier_three.title": "Um inimigo formidável!",
     "advancement.cobblemonraiddens.tier_three.description": "Derrote uma raid de nível três.",
     "advancement.cobblemonraiddens.tier_four.title": "Veterano de Raid",
     "advancement.cobblemonraiddens.tier_four.description": "Derrote uma raid de nível quatro.",
     "advancement.cobblemonraiddens.tier_five.title": "Mestre de Raid",
     "advancement.cobblemonraiddens.tier_five.description": "Derrote uma raid de nível cinco.",
-    "advancement.cobblemonraiddens.tier_six.title": "Ainda Mais Além",
+    "advancement.cobblemonraiddens.tier_six.title": "Ainda mais além",
     "advancement.cobblemonraiddens.tier_six.description": "Derrote uma raid de nível seis.",
     "advancement.cobblemonraiddens.tier_seven.title": "O Mais Poderoso",
     "advancement.cobblemonraiddens.tier_seven.description": "Derrote uma raid de nível sete.",
-    "battle.cobblemonraiddens.cheer.cannot": "Você não tem mais torcidas restantes.",
-    "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s torceu com \"Vá com Tudo\"!",
-    "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s torceu com \"Aguente firme\"!",
-    "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s torceu com \"Cure-se\"!",
+    "battle.cobblemonraiddens.cheer.cannot": "Você não tem mais apoios restantes.",
+    "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s deu apoio com \"Vá com Tudo\"!",
+    "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s deu apoio com \"Aguente firme\"!",
+    "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s deu apoio com \"Cure-se\"!",
     "battle.cobblemonraiddens.log.used_move": "%1$s usou %2$s!",
     "battle.cobblemonraiddens.player_join": "%1$s entrou na raid!",
     "battle.cobblemonraiddens.raid_energy": "Uma explosão de energia foi liberada de %1$s!",
@@ -38,7 +38,7 @@
     "block.cobblemonraiddens.raid_crystal_block": "Cristal da Toca de Raid",
     "block.cobblemonraiddens.raid_home_block": "Cristal da Toca de Raid",
     "category.cobblemonraiddens.raid_dens": "Tocas de Raid",
-    "cobblemon.battle.heal.bagitemcheerheal": "%1$s recuperou PS com a Torcida de Cura!",
+    "cobblemon.battle.heal.bagitemcheerheal": "%1$s recuperou PS com o Apoio de Cura!",
     "cobblemon.battle.start.dragoncheer": "%1$s está ficando animado!",
     "cobblemon.ui.status.shield": "ESC",
     "cobblemonraiddens.status.shield.apply": "Energia começou a se reunir ao redor de %1$s!",
@@ -61,15 +61,15 @@
     "feature.cobblemonraiddens.stellar": "Estelar",
     "item.cobblemonraiddens.raid_pouch": "Bolsa de Raid",
     "item.cobblemonraiddens.cheer.tooltip": "Só pode ser usado em Batalhas de Raid",
-    "item.cobblemonraiddens.cheer_attack": "Torcida de Ataque",
+    "item.cobblemonraiddens.cheer_attack": "Apoio de Ataque",
     "item.cobblemonraiddens.cheer_attack.tooltip": "Aumenta o Atk e Sp. Atk do seu grupo em 50%",
-    "item.cobblemonraiddens.cheer_defense": "Torcida de Defesa",
+    "item.cobblemonraiddens.cheer_defense": "Apoio de Defesa",
     "item.cobblemonraiddens.cheer_defense.tooltip": "Aumenta a Def e Sp. Def do seu grupo em 50%",
-    "item.cobblemonraiddens.cheer_heal": "Torcida de Cura",
+    "item.cobblemonraiddens.cheer_heal": "Apoio de Cura",
     "item.cobblemonraiddens.cheer_heal.tooltip": "Restaura 50% do PS do seu grupo",
     "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
-    "jade.cobblemonraiddens.player_count": "%s Dentro",
-    "jade.cobblemonraiddens.max_catches": "Máx Capturável: %s",
+    "jade.cobblemonraiddens.player_count": "%s dentro",
+    "jade.cobblemonraiddens.max_catches": "Máx capturável: %s",
     "jade.cobblemonraiddens.not_catchable": "*Não Pode Ser Capturado",
     "key.cobblemonraiddens.accept": "Aceitar Atalho",
     "key.cobblemonraiddens.deny": "Recusar Atalho",
@@ -118,7 +118,7 @@
     "screen.cobblemonraiddens.raid.title.1": "Raid em",
     "screen.cobblemonraiddens.raid.title.2": "Andamento",
     "screen.cobblemonraiddens.raid.button": "Sair",
-    "screen.cobblemonraiddens.request.title": "Novo Pedido de Entrada!",
+    "screen.cobblemonraiddens.request.title": "Novo pedido de entrada!",
     "screen.cobblemonraiddens.request.description": "%s pediu para entrar na raid.",
     "screen.cobblemonraiddens.request.accept": "Aceitar",
     "screen.cobblemonraiddens.request.deny": "Recusar",
@@ -127,31 +127,31 @@
     "screen.cobblemonraiddens.reward.description.2": "%s desapareceu em algum lugar...",
     "screen.cobblemonraiddens.reward.pokemon": "Capturar",
     "screen.cobblemonraiddens.reward.item": "Passar",
-    "screen.cobblemonraiddens.reward.force_item": "Resgatar Recompensas",
+    "screen.cobblemonraiddens.reward.force_item": "Resgatar recompensas",
     "screen.cobblemonraiddens.footer": "%s: Modo Mouse",
-    "stat.cobblemonraiddens.raids_hosted": "Tocas de Raid Hospedadas",
-    "stat.cobblemonraiddens.raids_joined": "Tocas de Raid Ingressadas",
-    "stat.cobblemonraiddens.raids_completed": "Tocas de Raid Concluídas",
-    "stat.cobblemonraiddens.tier_one_completed": "Raids de Nível Um Concluídas",
-    "stat.cobblemonraiddens.tier_two_completed": "Raids de Nível Dois Concluídas",
-    "stat.cobblemonraiddens.tier_three_completed": "Raids de Nível Três Concluídas",
-    "stat.cobblemonraiddens.tier_four_completed": "Raids de Nível Quatro Concluídas",
-    "stat.cobblemonraiddens.tier_five_completed": "Raids de Nível Cinco Concluídas",
-    "stat.cobblemonraiddens.tier_six_completed": "Raids de Nível Seis Concluídas",
-    "stat.cobblemonraiddens.tier_seven_completed": "Raids de Nível Sete Concluídas",
+    "stat.cobblemonraiddens.raids_hosted": "Tocas de Raid hospedadas",
+    "stat.cobblemonraiddens.raids_joined": "Tocas de Raid ingressadas",
+    "stat.cobblemonraiddens.raids_completed": "Tocas de Raid concluídas",
+    "stat.cobblemonraiddens.tier_one_completed": "Raids de nível um concluídas",
+    "stat.cobblemonraiddens.tier_two_completed": "Raids de nível dois concluídas",
+    "stat.cobblemonraiddens.tier_three_completed": "Raids de nível três concluídas",
+    "stat.cobblemonraiddens.tier_four_completed": "Raids de nível quatro concluídas",
+    "stat.cobblemonraiddens.tier_five_completed": "Raids de nível cinco concluídas",
+    "stat.cobblemonraiddens.tier_six_completed": "Raids de nível seis concluídas",
+    "stat.cobblemonraiddens.tier_seven_completed": "Raids de nível sete concluídas",
     "tag.item.cobblemonraiddens.raid_den_keys": "Chave da Toca de Raid",
     "text.autoconfig.cobblemonraiddens/client.title": "Configuração do Cobblemon Raid Dens",
-    "text.autoconfig.cobblemonraiddens/client.category.beacon_beam": "Feixes de Sinalizador",
+    "text.autoconfig.cobblemonraiddens/client.category.beacon_beam": "Feixes de sinalizador",
     "text.autoconfig.cobblemonraiddens/client.category.gui": "Gui",
     "text.autoconfig.cobblemonraiddens/client.category.raiding": "Invasão",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_one": "Sinalizador de Nível Um",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_two": "Sinalizador de Nível Dois",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_three": "Sinalizador de Nível Três",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_four": "Sinalizador de Nível Quatro",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_five": "Sinalizador de Nível Cinco",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_six": "Sinalizador de Nível Seis",
-    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_seven": "Sinalizador de Nível Sete",
-    "text.autoconfig.cobblemonraiddens/client.option.auto_accept_requests": "Aceitar Pedidos de Entrada Automaticamente",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_one": "Sinalizador de nível um",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_two": "Sinalizador de nível dois",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_three": "Sinalizador de nível três",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_four": "Sinalizador de nível quatro",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_five": "Sinalizador de nível cinco",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_six": "Sinalizador de nível seis",
+    "text.autoconfig.cobblemonraiddens/client.option.show_beam_tier_seven": "Sinalizador de nível sete",
+    "text.autoconfig.cobblemonraiddens/client.option.auto_accept_requests": "Aceitar pedidos de entrada automaticamente",
     "text.autoconfig.cobblemonraiddens/client.option.enable_raid_logs": "Mostrar Logs da Raid",
     "text.autoconfig.cobblemonraiddens/client.option.raid_popup_x": "Popup da Raid X (%)",
     "text.autoconfig.cobblemonraiddens/client.option.raid_popup_y": "Popup da Raid Y (%)",
