Updated lang files and added French (cr: Nioxyde_)

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -7,7 +7,7 @@
     "advancement.cobblemonraiddens.raid_dynamax.description": "Defeat a dynamax raid.",
     "advancement.cobblemonraiddens.raid_mega.title": "Overflowing With Power",
     "advancement.cobblemonraiddens.raid_mega.description": "Defeat a mega raid.",
-    "advancement.cobblemonraiddens.raid_shard_charge.title": "The Treasure of Area Zero",
+    "advancement.cobblemonraiddens.raid_shard_charge.title": "Now You're Thinking With Raid Dens",
     "advancement.cobblemonraiddens.raid_shard_charge.description": "Fully charge a Raid Shard.",
     "advancement.cobblemonraiddens.raid_shiny.title": "A Sparkling Success",
     "advancement.cobblemonraiddens.raid_shiny.description": "Receive a shiny from a raid.",
