Reworked boss loot table for raid pouches

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -49,8 +49,10 @@
     "error.cobblemonraiddens.command_blacklist": "You cannot use that command in a raid.",
     "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
     "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
+    "error.cobblemonraiddens.missing_boss_for_tier": "No raid bosses for that tier could be found. Rolling random tier.",
     "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
     "error.cobblemonraiddens.player_in_raid": "You cannot refresh a player that's in the middle of a raid.",
+    "error.cobblemonraiddens.raid_boss_not_found": "Failed to build raid pouch due to missing raid boss.",
     "feature.cobblemonraiddens.default": "Regular",
     "feature.cobblemonraiddens.dynamax": "Dynamax",
     "feature.cobblemonraiddens.gigantamax": "Gigantamax",
